--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/config": "^9.0 || ^10.0",
-        "illuminate/console": "^9.0 || ^10.0",
+        "illuminate/config": "^9.0 || ^10.0 || v11.0",
+        "illuminate/database": "^9.0 || ^10.0 || v11.0",
         "doctrine/dbal": "^3.0",
         "krlove/code-generator": "^1.0"
     },
